Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-19356

Python dumper shows wrong array contents

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 4.4.1, Qt Creator 4.5.0-beta1, Qt Creator 4.5.0-rc1, Qt Creator 4.5.1, Qt Creator 4.6.0-beta1, Qt Creator 4.6.0 , Qt Creator 4.6.1, Qt Creator 4.6.2, Qt Creator 4.7.0-beta1, Qt Creator 4.7.0-beta2, Qt Creator 4.7.0, Qt Creator 4.7.1, Qt Creator 4.8.0-beta1
    • Debugger
    • None
    • Windows 10 64 bits
      Visual Studio 2015 C++ compiler
    • 5a8b198b9a76d63854bebaa364aae9780890b2fb (qt-creator/qt-creator/4.8) e6190babdbb2f5d9ea2ef6e5fcf6e7ad00c91847 (qt-creator/qt-creator/master)

      Using the Python dumper, when an array inside a struct is accessed with the same name
      as a local array. The debugger shows the wrong contents in the local array, it shows the data of the array inside the struct.

      See the attached example code and the output screenshots of the debugger with the Debug helper enabled / disabled

        1. withPythonDumper.PNG
          withPythonDumper.PNG
          9 kB
        2. withoutPythonDumper.PNG
          withoutPythonDumper.PNG
          9 kB
        3. test.cpp
          0.2 kB
        For Gerrit Dashboard: QTCREATORBUG-19356
        # Subject Branch Project Status CR V

            davschul David Schulz
            marc_philippens Marc Philippens
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes