Debugger: skip child items when looking for partial variables

Change-Id: Id76f3b1009b068bf8b685d7b7a88d49d85033f03
Fixes: QTCREATORBUG-19356
Reviewed-by: Christian Stenger <christian.stenger@qt.io>