src/libs/qtcreatorcdbext/pycdbextmodule.cpp
@@ -220,12 +220,17 @@ static PyObject *cdbext_listOfLocals(PyObject *, PyObject *args) // -> [ Value ]
         ++currentPartialIname; // skip "local" part
 
         ULONG symbolGroupIndex = 0;
+        ULONG childEndIndex = 0;
         for (;symbolGroupIndex < scopeEnd; ++symbolGroupIndex) {
-            const PyValue value(symbolGroupIndex, symbolGroup);
-            if (value.name() == *currentPartialIname) {
-                PyList_Append(locals, createPythonObject(value));
-                return locals;
+            PyValue value(symbolGroupIndex, symbolGroup);
+            if (childEndIndex <= symbolGroupIndex) { // do not return a child value
+                if (value.name() == *currentPartialIname) {
+                    PyList_Append(locals, createPythonObject(value));
+                    return locals;
+                }
+                ++childEndIndex;
             }
+            childEndIndex += ULONG(value.childCount());
         }
     }
 
